# Chessir

./: .gitignore  README.md  chessnut_moves_comparison.py  chessnut_speed_comparison.py  pyproject.toml
Chessir/: __init__.py  game.py  square_attacked.py
Chessir/tests/: test_board.py  test_game.py  test_moves.py
Chessir_package/: README.md
Chessir_package/src/Chessir/: game.py  moves.py  square_attacked.py
Chessir_package/tests/: test_board.py  test_game.py  test_moves.py
src/Chessir/: game.py  square_attacked.py
tests/: test_board.py  test_game.py  test_moves.py
