[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chessir"
version = "0.1.0"
authors = [
  { name="Stuart Rickard", email="dev@bau-dev.com" },
]
description = "A chess board model that will import and export FEN, generate valid moves, and provide game status"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stuart-rickard/Chessir"
Issues = "https://github.com/stuart-rickard/Chessir/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/Chessir"]